--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="anim3">Bonjour</div>
         <div class="anim4">Bonjour</div>
         <div class="anim5">Bonjour</div>
-        <div class="anim6">Bonjour</div>
+        <div class="anim6">Salut</div>
     </section>
 </body>
 </html>
